# Hyperliquid-Supurr-Skill

./: README.md  SKILL.md  STRATEGY_API.md
.claude-plugin/: plugin.json
examples/strategy-simple/: Cargo.toml
examples/strategy-simple/src/: config.rs  lib.rs  state.rs  strategy.rs
references/: commands.md  events.md  strategy-trait.md  types.md
scripts/: skill-install.sh
templates/strategy-template/: Cargo.toml
templates/strategy-template/src/: config.rs  lib.rs  state.rs  strategy.rs
tutorials/: custom-strategy.md
