[package]
name = "strategy-template"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Template scaffold for custom trading strategies"

[dependencies]
bot-core = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
